# Agentic-AI-Platform-on-Databricks

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: databricks-cicd.yml
container/: README.md  docker-compose.yml
docs/: architecture.md  runbook.md
docs/adrs/: 0001-supervisor-specialist-orchestration.md  0004-databricks-mcp-gateway-constraints.md  0005-pydantic-ai-tool-layer.md  0006-prompt-engineering-layered-governed-design.md  README.md
src/ai_app/: main.py  orchestration.py  runtime_factory.py  settings.py  supervisor.py  supervisor_langgraph.py
src/ai_app/agents/: __init__.py  ai_backend_engineer.py  ai_data_engineer.py  ai_data_scientist.py  ai_database_admin.py  ai_engineer.py  ai_frontend_engineer.py  ai_fullstack_engineer.py  ai_machine_learning_engineer.py  ai_stream_engineer.py  backend.py  base.py  data_engineer.py  data_scientist.py  database_admin.py  frontend.py  fullstack.py  ml_engineer.py  registry.py  stream_engineer.py
src/ai_app/integrations/: mcp_data_sources.py
src/ai_app/resources/: application.json
src/ai_app/utils/: __init__.py  env.py  memory.py
